# solid-state-anemometer

./: README.md
linux-project/: README.md
linux-project/comms-project/: Cargo.toml  install_executable.sh
linux-project/comms-project/src/: comms.rs  lib.rs  main.rs
linux-project/comms-project/src/comms/: mock.rs  protocol.rs  uart.rs
linux-project/gui-project/: README.md
mcu-project/: .gitignore
mcu-project/mcu-project-zephyr/: requirements.txt
mcu-project/mcu-project-zephyr/.west/: config
mcu-project/mcu-project-zephyr/app/: CMakeLists.txt  prj.conf  west.yml
mcu-project/mcu-project-zephyr/app/boards/: nucleo_l476rg.overlay
mcu-project/mcu-project-zephyr/app/include/: queues.hpp
mcu-project/mcu-project-zephyr/app/src/: main.cpp
mcu-project/mcu-project-zephyr/app/src/adc/: CMakeLists.txt  adc_thread.cpp  adc_thread.hpp  backend_adc.cpp  backend_adc.hpp
mcu-project/mcu-project-zephyr/app/src/calculations/: CMakeLists.txt  calculation_thread.cpp  calculation_thread.hpp  wind_speed_calculator.cpp  wind_speed_calculator.hpp
mcu-project/mcu-project-zephyr/app/src/comms/: CMakeLists.txt  backend_uart.cpp  backend_uart.hpp  comms_backend.hpp  comms_request_type.hpp  comms_thread.cpp  comms_thread.hpp  protocol.cpp  protocol.hpp
mcu-project/mcu-project-zephyr/app/tests/comms_tests/: CMakeLists.txt  prj.conf  testcase.yaml
mcu-project/mcu-project-zephyr/app/tests/comms_tests/src/: main.cpp
mcu-project/mcu-project-zephyr/scripts/: rebuild.sh
